[gd_scene load_steps=3 format=3 uid="uid://dae0e6emjb4q4"]

[ext_resource type="Script" path="res://gimmicks/core_bullet/core_bullet.gd" id="1_b8vgj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v2vhg"]
radius = 700.0

[node name="BulletGimmick" type="Node2D"]
script = ExtResource("1_b8vgj")

[node name="RangeArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
monitorable = false

[node name="RangeAreaCollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_v2vhg")
debug_color = Color(0.7, 0, 0, 0.109804)

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
